Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
-
Linux (openSUSE 12.3) x86_64
-
many
Description
I configured the build using
./configure -no-gui -opensource -confirm-license
And then I just started to build. It looks like some modules do not check if their dependencies are enabled and still try to build if not. In this case e.g. this happens:
cd examples/ && ( test -e Makefile || /tmp/qt-everywhere-opensource-src-5.2.1/qtbase/bin/qmake /tmp/qt-everywhere-opensource-src-5.2.1/qtdeclarative/examples/examples.pro -o Makefile ) && make -f Makefile
make[2]: Entering directory `/tmp/qt-everywhere-opensource-src-5.2.1/qtdeclarative/examples'
cd qml/ && ( test -e Makefile || /tmp/qt-everywhere-opensource-src-5.2.1/qtbase/bin/qmake /tmp/qt-everywhere-opensource-src-5.2.1/qtdeclarative/examples/qml/qml.pro -o Makefile ) && make -f Makefile
make[3]: Entering directory `/tmp/qt-everywhere-opensource-src-5.2.1/qtdeclarative/examples/qml'
cd qmlextensionplugins/ && ( test -e Makefile || /tmp/qt-everywhere-opensource-src-5.2.1/qtbase/bin/qmake /tmp/qt-everywhere-opensource-src-5.2.1/qtdeclarative/examples/qml/qmlextensionplugins/qmlextensionplugins.pro -o Makefile ) && make -f Makefile
Project ERROR: Unknown module(s) in QT: gui
Things then depending on QtDeclarative (e.g. QtLocation) are not omitted as it looks to me on a glance.
Attachments
Issue Links
- relates to
-
QTBUG-39118 modules depending on QtGUI not automatically deactivated when configuriting with -no-gui
-
- Closed
-
For Gerrit Dashboard: QTBUG-36893 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
78420,2 | the shell example and a bunch of reference examples need no QtGui | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
78421,2 | the qmlextensionplugins example and a bunch of reference examples need QtQuick | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
78429,2 | the poster example needs no widgets, but it needs quick | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |
78733,2 | the qsdbg example needs no QtGui | stable | qt/qtscript | Status: MERGED | +2 | 0 |
79419,3 | Position plug-ins don't need QtGui | stable | qt/qtlocation | Status: MERGED | +2 | 0 |