the shell example and a bunch of reference examples need no QtGui

Task-number: QTBUG-36893
Change-Id: I51e402c90bd727cd3066788e0864e887ab8cb9e4
Reviewed-by: Alan Alpert <aalpert@blackberry.com>